fixed the website bg color for better visibility

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   font-family: "Urbanist", sans-serif;
   scroll-behavior: smooth;
   font-weight: 400;
-  background-color: #000000f5;
+  background-color: #000000e9;
   color: white;
   overflow: hidden;
 }
